# CPP

./: 3DGeometry  CMakeLists.txt  RotatingCube.cpp
3DGeometry/: README.txt
Aruco_Identification/: ArUco Marker Test Sheet.docx  ArUcoMarkerDetection  CMakeLists.txt  CheckerboardForCalibration.docx  Identifying_Markers.cpp  README.txt
ColorDetector/: CMakeLists.txt  ColorIdentification  ColorIdentifier.cpp  README.txt
LinearAlgebra/: README.txt  TestingLAL.cpp  matrices.hpp
